Correccion Elementos visuales para movil

--- a/src/app/comun/carga/carga.component.html
+++ b/src/app/comun/carga/carga.component.html
@@ -1,7 +1,7 @@
 
 
 <div *ngIf="mostrarPantallaCarga" id="PantallaCarga" [style.opacity]="opacidad">
-	<img class="logo animacionCarga" src="../../../assets/General/Icono-Delirium.png"> 
-	<div class="tituloCarga Texto1">Consejo</div>
-	<div class="subtituloCarga Texto2">Si quereis sobrevivir elegid con cuidado vuestra composición de equipo.</div>
+    <div class="wrapper">
+	    <img class="logo animacionCarga" src="../../../assets/General/Icono-Delirium2.png"> 
+    </div>
 </div>
