--- a/src/app/comun/crear-heroe/crear-heroe.component.html
+++ b/src/app/comun/crear-heroe/crear-heroe.component.html
@@ -43,7 +43,7 @@
 
 		<div class="contenedorGenero">
 
-			<img class="imagenHeroe" src="../../../assets/Personajes/heroes/{{id_imagen}}.png">
+			<img class="imagenHeroe" src="../../../assets/Personajes/heroes/{{imagenId}}.png">
 
 			<div class="contenedorBotonesGenero">
 				<div class="botonGenero masculino" ><div class="botonInteriorGenero" (click)="seleccionarGenero('masculino')"></div></div>
