--- a/src/app/comun/carga/carga.component.sass
+++ b/src/app/comun/carga/carga.component.sass
@@ -13,13 +13,18 @@
   transition: opacity 2s
   opacity: 0
 
+.wrapper
+  position: absolute
+  width: 100%
+  height: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+
 .logo
   position: relative
   display: block
   width: 10%
-  top: 30%
-  left: 50%
-  margin-left: -5%
   margin-bottom: 5%
 
 .tituloCarga
