--- a/src/app/comun/index/index.component.sass
+++ b/src/app/comun/index/index.component.sass
@@ -1,5 +1,6 @@
 
 @import "../../../variables.sass"
+@import "../../../breakpoints.scss"
 
 .video-fondo
   position: fixed
@@ -12,7 +13,7 @@
   width: 100%
   min-height: 100%
   z-index: 2
-  opacity: 0.7
+  opacity: 1 
 
 .ContenedorInicio
   position: fixed
@@ -21,26 +22,29 @@
   width: 100%
   min-height: 100%
   z-index: 3
+  background-image: url("../../../assets/General/dibujo-fondo.png")
+  background-position: center center
+  background-size: 100% 100%
+  mix-blend-mode: multiply
 
 #error
   color: red
-
-#contenedorIconos
-  position: absolute
-  bottom: 3%
-  right: 3%
-  height: 5vh
-  .icono
-    position: relative
-    height: 100%
-    margin: 10px
 
 #contenedorLogo
   position: relative
   top: 15vh
   width: 100%
   height: 20vh
-//@media only screen and (min-width: 768px) //Pantallas mas de 600px
+  @include media("<=phone")
+    top: 5vh
+
+#dibujoFondo
+  position: absolute
+  width: 100%
+  height: 100%
+  top: 0
+  left: 0
+  
 
 .Logo
   position: relative
@@ -59,7 +63,12 @@
   top: 40%
   left: 50%
   margin-left: -15%
-  background-color: rgba(0,0,0,0.7)
+  background-color: $colorFondo2  
+  @include media("<=phone")
+    top: 30vh
+    width: 40%
+    height: 50%
+    left: 45%
 
   .marcoInicioSesion
     position: absolute
@@ -76,9 +85,17 @@
     background-position: center center
     background-size: 100% 100%
 
+  .wrapperCampo
+    display: flex
+
+  .wrapperInterior
+    display: flex
+    height: 75%
+    flex-direction: column
+    justify-content: space-evenly
+
   .bloque 
     position: relative
-    width: 100%
     margin-top: 5px
     margin-bottom: 5px
 
@@ -89,14 +106,12 @@
     width: 80%
     margin-left: 10%
 
-  .textoUsuario
-    margin-left: 10%
-
-  .textoContraseña
-    margin-left: 10%
-
+  .texto
+    width: 30%
+    text-align: right
+    
   .input
-    width: 80%
+    width: 50%
     margin-left: 10%
     border: $colorTexto solid 3px
     border-radius: 20px
