--- a/src/app/comun/panel-mazmorra/panel-mazmorra.component.html
+++ b/src/app/comun/panel-mazmorra/panel-mazmorra.component.html
@@ -26,7 +26,7 @@
 			<div class="textoDescripcion Texto3"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ri </div>
 		</div>
 
-		<botonComponent mat-button [texto]="'Fijar'" [color]="'verde'" class="botonFijar" (click)="this.appService.iniciarMazmorra()"></botonComponent>
+		<botonComponent mat-button [texto]="'Fijar'" [color]="'verde'" class="botonFijar"></botonComponent>
 		<div class="tiempoEstimado Texto2">Tiempo estimado: 1 Hora</div>
 
 	</div>
