--- a/src/app/comun/panel-personaje/panel-personaje.component.sass
+++ b/src/app/comun/panel-personaje/panel-personaje.component.sass
@@ -349,38 +349,24 @@
 
     #contenedorExterno
         position: absolute
-        height: 100%
-        left: 12%
-        width: 29%
-
-        @include media("<=tablet")
-            left: 15%
-            width: 25%
-        @include media("<=phone")
-            left: 11%
-            width: 30%
+        display: flex
+        align-items: center
+        justify-content: center
+        flex-direction: column
+        height: 100vh
+        left: 17vw 
+        width: 18vw
 
         .marcoPersonaje
-            position: absolute
+            position: relative
             display: flex
             justify-content: center
             align-items: center
             height: 23vw
-            top: 5%
-            left: 7%
+            max-height: 50%
+            max-width: 100%
             z-index: 130
 
-            @include media("<=desktop")
-                height: 23vw
-                top: 5%
-                left: 8%
-            @include media("<=tablet")
-                height: 23vw
-                top: 5%
-                left: 2%
-            @include media("<=phone")
-                width: 13%
-                left: 10% 
             img 
                 position: relative
                 display: block
@@ -397,22 +383,17 @@
                 height: 100%
                 justify-content: center 
                 align-items: center 
-
                 img
                     position: absolute 
                     width: 50%
                     height: auto
 
-
         .contenedorSeleccion
-            position: absolute
-            top: 40%
+            position: relative
+            margin-top: 10%
             width: 100%
             height: 40%
             color: $colorTexto 
-            @include media("<=phone")
-                top: 52%
-
             hr
                 margin: 0 40px
                 border-bottom: 0px
