--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,4 @@
 
-
 @use '@angular/material' as mat
 @import "~@angular/material/theming"
 
@@ -24,7 +23,6 @@ $angular-dark-theme: mat.define-dark-theme( ( color: ( primary: $angular-primary
 
 .darkMode 
   @include mat.all-component-colors($angular-dark-theme)
-
 
 html
     margin: 0
@@ -71,7 +69,7 @@ body
     @include media("<=tablet")
         font-size: 20px
     @include media("<=phone")
-        font-size: 10px
+        font-size: 15px
     @include media("<=smphone")
         font-size: 10px
 
@@ -106,6 +104,12 @@ body
     border-image-repeat: stretch stretch
     border-style: solid
     box-sizing: border-box
+    @include media("<=phone")
+        border-image-width: 7px
+    &.sombra
+      -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75)
+      -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75)
+      box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75)
 
 .borde2
     border-image: url("/assets/ui/frame/fr_02.png")
@@ -116,6 +120,8 @@ body
     border-image-repeat: stretch stretch
     border-style: solid
     box-sizing: border-box
+    @include media("<=phone")
+        border-image-width: 10px
 
 #botonPruebas
   position: absolute
