--- a/src/app/comun/carga/carga.component.sass
+++ b/src/app/comun/carga/carga.component.sass
@@ -10,7 +10,7 @@
   background-color: black
   color: $colorTexto
   text-align: center
-  transition: opacity 2s
+  transition: opacity 1s
   opacity: 0
 
 .wrapper
@@ -20,6 +20,14 @@
   display: flex
   align-items: center
   justify-content: center
+
+.visible
+  opacity: 1
+  pointer-events: all
+
+.oculta
+  opacity: 0
+  pointer-events: none
 
 .logo
   position: relative
