--- a/src/app/comun/configuracion/configuracion.component.sass
+++ b/src/app/comun/configuracion/configuracion.component.sass
@@ -14,7 +14,7 @@
     width: 50%
     height: 20%
     min-width: 70vw
-    min-height: 60vh
+    min-height: 80vh
     color: $colorTexto
     padding: 0
     overflow: initial
@@ -77,26 +77,24 @@
         background-color: rgba(black,0.3)
         .opcionesGenerales
             position: relative
+            display: flex
+            flex-direction: column
+            justify-content: space-around
+            align-items: center
             width: 100%
             height: 100%
-
-            .botonCerrarSesion
-                position: absolute
-                bottom: 10%
-                width: 30%
-                left: 50%
-                text-align: center
-                margin-left: -15%
-                height: 10%
-                border: 2px $colorTexto solid
-                border-radius: 50px
+            .opcion
+              position: relative
+              width: 33%
+              height: 25%
+              text-align: center
 
     .contenedorBotones
         position: absolute
         display: flex
         width: 100%
         height: 10%
-        bottom: 10%
+        bottom: 5%
 
         .boton
             position: relative
