--- a/src/app/comun/inmap/inmap.component.sass
+++ b/src/app/comun/inmap/inmap.component.sass
@@ -22,6 +22,27 @@
         width: 100%
         height: 100%
 
+#tiempo
+  position: absolute
+  z-index: 5
+  left: 35vw 
+  top: 2vh
+  width: 30vw
+  .barraTiempo
+    width: 100%
+  .botonCentrar
+    position: absolute
+    height: 35%
+    width: 27%
+    top: 39%
+    left: 64%
+  .botonToggleInMap
+    position: absolute
+    height: 35%
+    width: 27%
+    top: 39%
+    left: 11%
+
 #ContenedorPanelGeneral
     position: absolute
     top: 0
@@ -104,15 +125,8 @@
       z-index: 5
       top: 2%
       left: 2% 
-      width: 25%
-      height: 6%
-
-    #tiempo
-      position: absolute
-      z-index: 5
-      left: 32%
-      top: 2%
-      width: 33%
+      width: 20%
+      height: 8%
 
     #textoDelirium
       position: absolute
@@ -142,9 +156,9 @@
     #iconoConfiguracion
         position: absolute
         z-index: 5
-        top: 2%
-        left: 27%
-        height: 6%
+        bottom: 5%
+        left: 2%
+        height: 10%
 
     #iconoSocial
         position: absolute
