--- a/src/app/comun/mazmorra/mazmorra.component.html
+++ b/src/app/comun/mazmorra/mazmorra.component.html
@@ -1,13 +1,3 @@
-<!--________________________________________________________
-    Archivo HTML -  Pantalla Mazmorra SNACK
-    ________________________________________________________
-    Proyecto:       Delirium
-    Versión:        0.2
-    Titulo:         Mazmorra Delirium
-    Creado por:     Carlos Cabrera Criado
-    Fecha:          16/08/17
-    Descripción:    Archivo HTML de Mazmorra principal
-    -->
 
     <!--   ******************* -->
         <!--     DISEÑO DE FONDO   -->
@@ -53,6 +43,16 @@
 		</div>
 	</div>
 
+	<!--   ******************* -->
+	<!--      Tiempo    -->
+	<!--   ******************* -->
+
+    <div id="tiempo">
+	    <img class="barraTiempo" src="../../../assets/tiempo/panel-tiempo.png">
+	    <botonComponent mat-button (click)="centrarMazmorra()" [texto]="'Centrar'" [tipoBoton]="2" [color]="'violeta'" class="botonCentrar"></botonComponent>
+	    <botonComponent mat-button (click)="appService.verInMap()" [texto]="'Mapa'" [tipoBoton]="2" [color]="'violeta'" class="botonToggleInMap"></botonComponent>
+    </div>
+
 <!--   ************************** -->
 <!--    CONTENEDOR MAIN WINDOW    -->
 <!--   ************************** -->
@@ -84,10 +84,16 @@
     <!--
 	<img id="iconoSocial" src="../../../assets/Iconos/Icono-Social.png" (click)="this.appService.abandonarMazmorra()"/>
     -->
-	<img id="iconoSocial" src="../../../assets/Iconos/07.png" (click)="this.mazmorraService.activarEnemigo(0)"/>
-	<img id="iconoSocial2" src="../../../assets/Iconos/07.png" (click)="this.mazmorraService.activarDialogo()"/>
 
+		<!--   ******************* -->
+		<!--       BOTONES TEST    -->
+		<!--   ******************* -->
+        <!--
+	<img id="test1" src="../../../assets/Iconos/07.png" (click)="this.mazmorraService.activarEnemigo(0)"/>
+	<img id="test2" src="../../../assets/Iconos/07.png" (click)="this.mazmorraService.activarDialogo()"/>
+	<img id="iconoCentrar" src="../../../assets/Iconos/07.png" (click)="this.centrarMazmorra()"/>
 
+        -->
 		<!--   ******************* -->
 		<!--        Experiencia    -->
 		<!--   ******************* -->
@@ -129,7 +135,6 @@
             Panel Acción
      ************************************************* -->
 <div *ngIf="mazmorraService.cargaCompleta" class="Panel Barra-Accion" [ngClass]="renderIndividual()">
-
 	<!-- Panel de mensajes -->
     <div *ngIf="true" id="Barra-Mensajes" class="Barra-Mensajes Texto1" [ngClass]="{'mostrar':this.mazmorraService.sesion.render.interfaz.barraAccion.mostrar}">
         {{this.mazmorraService.sesion.render.interfaz.barraAccion.mensajeAccion}}
