--- a/src/app/comun/mazmorra/mazmorra.component.sass
+++ b/src/app/comun/mazmorra/mazmorra.component.sass
@@ -1,14 +1,3 @@
-/*________________________________________________________
- * Archivo CSS - Sass Estilos Pause
- * --------------------------------------------------------
- * Proyecto:    Delirium
- * Versión:   0.1
- * Titulo:    Sass Estilos Pause
- * Creado por:    Carlos Cabrera Criado
- * Fecha:       16/08/17
- * Descripción:   Estilos de las pantallas de pausa
- *
- */
 
 @import '../../../breakpoints.scss'
 @import '../../../variables.sass'
@@ -16,6 +5,28 @@
   position: absolute
   width: 100vw
   height: 100vh
+
+#tiempo
+  position: absolute
+  z-index: 5
+  left: 35vw 
+  top: 2vh
+  width: 30vw
+  .barraTiempo
+    width: 100%
+  .botonCentrar
+    position: absolute
+    height: 35%
+    width: 27%
+    top: 39%
+    left: 64%
+  .botonToggleInMap
+    position: absolute
+    height: 35%
+    width: 27%
+    top: 39%
+    left: 11%
+
 #pause 
   color: white 
   #generalPauseContainer 
@@ -174,10 +185,10 @@
 
 #iconoConfiguracion
     position: absolute
-    top: 2%
-    left: 27%
-    height: 6%
-    z-index: 6 
+    z-index: 5
+    bottom: 5%
+    left: 2%
+    height: 10%
 
 #iconoSocial
     position: absolute
@@ -185,6 +196,7 @@
     left: 32%
     height: 4%
     z-index: 10
+
 #iconoSocial2
     position: absolute
     top: 3%
@@ -192,14 +204,20 @@
     height: 4%
     z-index: 10
 
-#creditoMapa
+#iconoCentrar
     position: absolute
-    top: 2%
-    left: 2% 
-    width: 25%
-    height: 6%
-    z-index: 6
+    top: 3%
+    left: 50%
+    height: 10%
+    z-index: 10
 
+#creditoMapa
+  position: absolute
+  z-index: 5
+  top: 2%
+  left: 2% 
+  width: 20%
+  height: 8%
 
 #ContenedorPaneles
     .panel
@@ -498,7 +516,7 @@
     float: left
     vertical-align: top
     width: 32px
-    heigth: 32px
+    height: 32px
     line-height: 32px
     color: white
     text-align: center
@@ -839,6 +857,7 @@
   left: 10vw
   top: 68vh 
   z-index: 15
+  pointer-events: none
 
   &.Individual
     height: 7vh
@@ -1105,13 +1124,13 @@ $highlightObjetivoColor: red
 
 #contenedorMapaMazmorra
   .contenedorIsometrico
-    position: absolute
-    overflow: scroll
+    position: relative
     mix-blend-mode: multiply
     top: 0
     left: 0
     width: 100% 
     height: 100% 
+    //transform: translate(-50%,-50%) scale(0.7)
     &::-webkit-scrollbar
         display: none
 
@@ -1128,6 +1147,7 @@ $highlightObjetivoColor: red
         height: 2480px 
         mix-blend-mode: multiply
         z-index: 5
+        transform: scale(0.8)
 
         .elementoIsomentrico
             position: absolute
