--- a/src/app/comun/panel-equipo/panel-equipo.component.sass
+++ b/src/app/comun/panel-equipo/panel-equipo.component.sass
@@ -2,73 +2,111 @@
 @import "../../../variables.sass"
 @import "../../../breakpoints.scss"
 
+.cdk-drag-preview
+    position: absolute
+    width: 10%
+    height: 10%
+    box-sizing: border-box
+    border-radius: 4px
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12)
+    opacity: 0.5
+
+.cdk-drag-placeholder
+    position: relative
+    height: 50%
+    aspect-ratio: 1
+    border: solid
+    box-sizing: border-box
+    background: red
+    opacity: 0.7
+
+.cdk-drag-animating
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1)
+
+.listaInventario.cdk-drop-list-dragging 
+    .contenedorImagen:not(.cdk-drag-placeholder) 
+      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1)
+
+
 .contenedorPanelEquipo
     color: $colorTexto
 
     .fondoPanel
         position: absolute
-        width: 90%
+        width: 100%
         height: 100%
-        right: 0
-        background-image: url("../../../assets/Background/Fondo-Panel-Personaje.png")
+        left: 12%
+        border: 1px solid
+        background-color: #231c1c
         background-size: 100% 100% 
-        @include media("<=tablet")
-            width: 86%
-        @include media("<=phone")
-            width: 90%
+        box-sizing: border-box
+        border-radius: 5px
+        -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+        -moz-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+        box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
 
     .fondoPestana
         position: absolute
-        width: 12%
-        height: 22%
-        left: 0 
+        width: 11.1%
+        height: 18%
+        left: 1% 
         top: 21%
-        background-image: url("../../../assets/Background/Pestana-Panel-Personaje.png")
+        border-top: 1px solid
+        border-left: 1px solid
+        border-bottom: 1px solid
         background-size: 100% 100% 
-        @include media("<=tablet")
-            width: 15%
-            left: 0
-        @include media("<=phone")
-            width: 13%
-            left: 0 
+        background-color: #231c1c
+        background-size: 100% 100% 
+        box-sizing: border-box
+        border-radius: 5px 0px 0px 5px
+        -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+        -moz-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+        box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
 
     #contenedorPanelInterno
         position: absolute
         width: 40%
-        height: 98%
+        height: 100%
         right: 0
-        top: 1% 
-
         .fondoPanelInterior
             position: absolute
-            width: 100%
+            width: 101%
             height: 100%
-            background-image: url("../../../assets/Background/Fondo-Panel-Personaje-Interno.png")
+            border: 1px solid burlywood
+            background-color: #1e1c21
             background-size: 100% 100% 
+            box-sizing: border-box
+            border-radius: 5px
+            -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+            -moz-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+            box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
 
         .titulo
             position: relative
             width: 100%
             text-align: center
-            margin: 10px 
+            margin: 10px 0px 
 
         .containerEstadisticas
             position: relative
+            display: flex
+            justify-content: space-around
             width: 100%
-            height: 30%
+            height: 35%
 
             .columna
                 position: relative
-                display: inline-block
-                width: 40%
+                display: inline-flex
                 height: 100%
-                margin-left: 7.5%
+                flex-direction: column
+                display: flex
+                justify-content: space-around
 
                 .estadistica
                     position: relative
                     width: 100%
                     height: 30%
-                    margin: 2% 0
+                    margin: 0
                     img
                         position: relative
                         display: inline-block
@@ -76,36 +114,98 @@
                         max-height: 100%
                     .textoEstadisticas
                         position: relative
-                        display: inline-block
+                        display: inline-flex
                         vertical-align: top
                         margin-left: 10%
                         width: 60%
+                        line-height: 1em
+                        white-space: nowrap
 
-        .contenedorEfectos
-            position: relative
+        #contenedorInventario2
+          position: relative
+          display: flex
+          align-items: center
+          justify-content: center
+          height: 30%
+          aspect-ratio: 2.5
+          margin: 10px 10%
+          border: 3px solid $colorTexto
+
+          #contenedorReticula
+            position: absolute
+            width: 100%
+            height: 100%
             display: flex
-            align-items: center
-            justify-content: center
-            width: 80%
-            height: 40%
-            margin: 10px 10%
-            border: 3px solid $colorTexto
+            flex-direction: row
+            flex-wrap: wrap
+            pointer-events: none
+            .celda
+              position: relative
+              display: inline-block
+              height: 50%
+              aspect-ratio: 1
+              box-sizing: border-box
+              pointer-events: none
+              border: solid $colorTexto 1px
+              
+          #listaInventario    
+            position: absolute
+            width: 100%
+            height: 100%
+            display: flex
+            flex-direction: row
+            flex-wrap: wrap
+            cursor: move
+            .contenedorImagen
+              position: relative
+              display: inline-block
+              height: 50%
+              aspect-ratio: 1
+              .imagen
+                position: absolute
+                height: 100%
+                aspect-ratio: 1
+
 
     #contenedorExterno
         position: absolute
+        display: flex
+        align-content: center
+        justify-content: center
         height: 100%
         left: 12%
         width: 49%
         .titulo
             position: absolute
-            top: 5%
-            left: 20%
+            top: 3%
+            left: 5%
+
         .contenedorEquipo
             position: absolute
             width: 70%
-            height: 40%
+            max-height: 100%
             top: 15%
-            left: 15%
+            display: grid
+            grid-template-columns: 0.5fr repeat(2, 0.25fr) 0.5fr
+            grid-template-rows: repeat(2, 1fr) 1.2fr
+            grid-column-gap: 20px
+            grid-row-gap: 20px
+
+            .heroe
+              grid-area: 1 / 2 / 4 / 4
+            .pantalones
+              grid-area: 1 / 4 / 2 / 5 
+            .botas
+              grid-area: 2 / 4 / 3 / 5 
+            .casco 
+              grid-area: 1 / 1 / 2 / 2 
+            .pechera
+              grid-area: 2 / 1 / 3 / 2 
+
+            .arma1
+              grid-area: 3 / 1 / 4 / 2 
+            .arma2
+              grid-area: 3 / 4 / 4 / 5 
 
             img 
                 position: absolute
@@ -178,6 +278,7 @@
             left: 50%
             margin-left: -45%
             bottom: 5%
+            display: none
             .icono
                 position: absolute
                 width: 17%
