--- a/src/app/comun/panel-general/panel-general.component.html
+++ b/src/app/comun/panel-general/panel-general.component.html
@@ -6,27 +6,27 @@
 <div class="contenedorPanelGeneral"> 
 	
 	<div class="contenedorBotonGeneral primerBotonGeneral" (click)="cambiarPantalla('Personaje')">
-		<img class="iconoPanelGeneral" src="../../../assets/Iconos/Icono-Personaje.png" />	
+        <img [ngClass]="{'seleccionado': pantalla=='Personaje'}" class="iconoPanelGeneral" src="../../../assets/Iconos/Icono-Personaje.png" />	
 		<div class="textoPanelGeneral Texto2">Personaje</div>
 	</div>
 
 	<div class="contenedorBotonGeneral" (click)="cambiarPantalla('Equipo')">
-		<img class="iconoPanelGeneral" src="../../../assets/Iconos/Icono-Equipo.png" />	
+        <img [ngClass]="{'seleccionado': pantalla=='Equipo'}" class="iconoPanelGeneral" src="../../../assets/Iconos/Icono-Equipo.png" />	
 		<div class="textoPanelGeneral Texto2">Equipo</div>
 	</div>
 
 	<div class="contenedorBotonGeneral" (click)="cambiarPantalla('Mazmorra')">
-		<img class="iconoPanelGeneral" src="../../../assets/Iconos/Icono-Mazmorra.png" />	
+        <img [ngClass]="{'seleccionado': pantalla=='Mazmorra'}"class="iconoPanelGeneral" src="../../../assets/Iconos/Icono-Mazmorra.png" />	
 		<div class="textoPanelGeneral Texto2">Mazmorra</div>
 	</div>
 
 	<div class="contenedorBotonGeneral" (click)="cambiarPantalla('Diario')">
-		<img class="iconoPanelGeneral" src="../../../assets/Iconos/Icono-Diario.png" />	
+        <img [ngClass]="{'seleccionado': pantalla=='Diario'}"class="iconoPanelGeneral" src="../../../assets/Iconos/Icono-Diario.png" />	
 		<div class="textoPanelGeneral Texto2">Diario</div>
 	</div>
 
 	<div class="contenedorBotonGeneral" (click)="cambiarPantalla('Tienda')">
-		<img class="iconoPanelGeneral" src="../../../assets/Iconos/Icono-Tienda.png" />	
+        <img [ngClass]="{'seleccionado': pantalla=='Tienda'}"class="iconoPanelGeneral" src="../../../assets/Iconos/Icono-Tienda.png" />	
 		<div class="textoPanelGeneral Texto2">Tienda</div>
 	</div>
 
