--- a/src/app/comun/panel-general/panel-general.component.sass
+++ b/src/app/comun/panel-general/panel-general.component.sass
@@ -4,6 +4,9 @@
 
 .contenedorPanelGeneral
     position: absolute
+    display: flex
+    flex-direction: column
+    justify-content: space-evenly
     top: 0
     left: 0
     width: 12%
@@ -21,8 +24,18 @@
         z-index: 10
         width: 100%
         height: 100%
-        background-image: url("../../../assets/Frames/Frame-Panel-General.png")
+        background-color: #262222
         background-size: 100% 100%
+        border-image: url("/assets/ui/frame/fr_02.png")
+        border-image-slice: 35 35 35 35
+        border-image-width: 5px 0px 5px 5px
+        border-image-outset: 0px 0px 0px 0px
+        border-image-repeat: stretch stretch
+        border-style: solid
+        box-sizing: border-box
+        -webkit-box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.75)
+        -moz-box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.75)
+        box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.75)
         
     .contenedorBotonGeneral
         position: relative
@@ -31,22 +44,37 @@
         height: 18% 
         width: 100%
         z-index: 11
-        margin-top: 1vh
-        margin-bottom: 1vh
         align-items: center
-        justify-content: center
-        &.primerBotonGeneral
-            margin-top: 3vh
-        
+
         .iconoPanelGeneral
             position: relative
-            height: 80%
-            margin-left: 5%
+            height: 70%
+
+        .seleccionado
+          filter: drop-shadow(0px 0px 10px rgba(205,219,83,1))
+
         .textoPanelGeneral
             position: relative
             text-align: center
             color: white
             width: 100%
-            height: 20%
+            line-height: 1em
 
+    .fondoPestana
+        position: absolute
+        width: 11.1%
+        height: 22%
+        left: 1% 
+        top: 21%
+        border-top: 1px solid
+        border-left: 1px solid
+        border-bottom: 1px solid
+        background-size: 100% 100% 
+        background-color: #231c1c
+        background-size: 100% 100% 
+        box-sizing: border-box
+        border-radius: 5px 0px 0px 5px
+        -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+        -moz-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+        box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
 
