--- a/src/app/comun/panel-personaje/panel-personaje.component.sass
+++ b/src/app/comun/panel-personaje/panel-personaje.component.sass
@@ -7,30 +7,35 @@
 
     .fondoPanel
         position: absolute
-        width: 90%
+        width: 100%
         height: 100%
-        right: 0
-        background-image: url("../../../assets/Background/Fondo-Panel-Personaje.png")
+        left: 12%
+        border: 1px solid
+        background-color: #231c1c
         background-size: 100% 100% 
-        @include media("<=tablet")
-            width: 86%
-        @include media("<=phone")
-            width: 90%
+        box-sizing: border-box
+        border-radius: 5px
+        -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+        -moz-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+        box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
 
     .fondoPestana
         position: absolute
-        width: 12%
-        height: 22%
-        left: 0 
+        width: 11.1%
+        height: 18%
+        left: 1% 
         top: 1%
-        background-image: url("../../../assets/Background/Pestana-Panel-Personaje.png")
+        border-top: 1px solid
+        border-left: 1px solid
+        border-bottom: 1px solid
         background-size: 100% 100% 
-        @include media("<=tablet")
-            width: 15%
-            left: 0
-        @include media("<=phone")
-            width: 13%
-            left: 0 
+        background-color: #231c1c
+        background-size: 100% 100% 
+        box-sizing: border-box
+        border-radius: 5px 0px 0px 5px
+        -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+        -moz-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+        box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
 
     #contenedorSeleccionarHeroe
         position: absolute
@@ -195,16 +200,21 @@
     #contenedorPanelInterno
         position: absolute
         width: 60%
-        height: 98%
+        height: 100%
         right: 0
-        top: 1% 
 
         .fondoPanelInterior
             position: absolute
-            width: 100%
+            width: 101%
             height: 100%
-            background-image: url("../../../assets/Background/Fondo-Panel-Personaje-Interno.png")
+            border: 1px solid burlywood
+            background-color: #1e1c21
             background-size: 100% 100% 
+            box-sizing: border-box
+            border-radius: 5px
+            -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+            -moz-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
+            box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
         
         .contenedorGeneral
             position: absolute
