--- a/src/styles.sass
+++ b/src/styles.sass
@@ -32,6 +32,11 @@ html
     --animate-duration: 1s
 
 body
+    position: absolute
+    top: 0
+    left: 0
+    width: 100vw
+    height: 100vh
     margin: 0
     padding: 0
     //font-family: 'Tangerine','TangerineLocal', cursive
